@@ -676,6 +676,7 @@ timeout     = 0
 #                        ansi.sys: If set (by default), ANSI.SYS emulation is on. If clear, ANSI.SYS is not emulated and will not appear to be installed.
 #                                    NOTE: This option has no effect in PC-98 mode where MS-DOS systems integrate ANSI.SYS into the DOS kernel.
 #                           share: Report SHARE.EXE as resident. This will allow file locking to be performed, although not all SHARE functions are emulated.
+#               file access tries: If a positive integer is set, DOSBox-X will try to read/write/lock files directly on mounted local drives for the specified number of times before failing on the Windows system.
 #                minimum mcb free: Minimum free segment value to leave free. At startup, the DOS kernel will allocate memory
 #                                    up to this point. This can be used to deal with EXEPACK issues or DOS programs that cannot
 #                                    be loaded too low in memory. If you want more free conventional memory to be reported,
@@ -735,6 +736,7 @@ shell configuration as commands = false
 hma                             = true
 ansi.sys                        = true
 share                           = true
+file access tries               = 0
 minimum mcb free                = 0
 dosv                            = off
 ems                             = true
