@@ -1752,6 +1752,7 @@ timeout     = 0
 #                                                        direct    Non-standard behavior, encode the CALL FAR directly to the entry point rather than indirectly
 #                                                     Possible values: auto, off, msdos2, msdos5, direct.
 #                                            share: Report SHARE.EXE as resident. This will allow file locking to be performed, although not all SHARE functions are emulated.
+#                                file access tries: If a positive integer is set, DOSBox-X will try to read/write/lock files directly on mounted local drives for the specified number of times before failing on the Windows system.
 #              minimum dos initial private segment: In non-mainline mapping mode, where DOS structures are allocated from base memory, this sets the
 #                                                     minimum segment value. Recommended value is 0x70. You may reduce the value down to 0x50 if freeing
 #                                                     up more memory is important. Set to 0 for default.
@@ -1911,6 +1912,7 @@ dos sda size                                     = 0
 hma free space                                   = 34816
 cpm compatibility mode                           = auto
 share                                            = true
+file access tries                                = 0
 minimum dos initial private segment              = 0
 minimum mcb segment                              = 0
 minimum mcb free                                 = 0
