@@ -92,10 +92,11 @@ bool DOS_BreakFlag = false;
 bool DOS_BreakConioFlag = false;
 bool enable_dbcs_tables = true;
 bool enable_filenamechar = true;
-bool enable_share_exe = true;
 bool rsize = false;
 bool reqwin = false;
 bool packerr = false;
+bool enable_share_exe = true;
+int file_access_tries = 0;
 int dos_initial_hma_free = 34*1024;
 int dos_sda_size = 0x560;
 int dos_clipboard_device_access;
@@ -2821,6 +2822,7 @@ public:
 		enable_dbcs_tables = section->Get_bool("dbcs");
 		enable_share_exe = section->Get_bool("share");
 		enable_filenamechar = section->Get_bool("filenamechar");
+		file_access_tries = section->Get_int("file access tries");
 		dos_initial_hma_free = section->Get_int("hma free space");
         minimum_mcb_free = section->Get_hex("minimum mcb free");
 		minimum_mcb_segment = section->Get_hex("minimum mcb segment");
