@@ -3733,6 +3733,10 @@ void DOSBOX_SetupConfigSections(void) {
     Pbool->Set_help("Report SHARE.EXE as resident. This will allow file locking to be performed, although not all SHARE functions are emulated.");
     Pbool->SetBasic(true);
 
+    Pint = secprop->Add_int("file access tries",Property::Changeable::WhenIdle,0);
+    Pint->Set_help("If a positive integer is set, DOSBox-X will try to read/write/lock files directly on mounted local drives for the specified number of times before failing on the Windows system.");
+    Pint->SetBasic(true);
+
     Phex = secprop->Add_hex("minimum dos initial private segment", Property::Changeable::WhenIdle,0);
     Phex->Set_help("In non-mainline mapping mode, where DOS structures are allocated from base memory, this sets the\n"
             "minimum segment value. Recommended value is 0x70. You may reduce the value down to 0x50 if freeing\n"
